# movie-search-engine

./: .env_template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
bot/: main.py
bot/alembic/: env.py
bot/alembic/versions/: 2024_11_04_1538-7d25638ad406_.py
bot/api/: __init__.py
bot/api/common_mixins/: __init__.py  manager.py
bot/api/media_search/: __init__.py  media_search.py
bot/api/movie_search/: __init__.py  movie_advanced_search.py  movie_related_search.py  movie_search.py
bot/api/person_search/: __init__.py  person_search.py
bot/api/review_search/: __init__.py  review_search.py
bot/api/utils/: __init__.py  get_objects.py  params.py
bot/cache/: button_cache.py  data_for_cache.py  fill_in_cache.py  get_data.py
bot/config/: settings.py
bot/database/core/: db_helper.py
bot/database/models/: __init__.py  favorite.py  history.py  mixins.py  request.py
bot/database/repository/: favorite.py  history.py  request.py
bot/keyboards/inline/: __init__.py
bot/keyboards/reply/: survey_kb.py
bot/middlewares/: db.py  errors.py
bot/routers/: __init__.py
bot/routers/advanced_commands/: __init__.py
bot/routers/base_commands/: __init__.py  common.py  start.py  unrecognized.py
bot/services/: favorite.py  history.py  request.py  request_data.py
bot/states/: history.py  movie_search.py
bot/utils/buttons/: __init__.py  get_buttons.py  parse_cb_data.py
bot/utils/constants/: api_data.py  cache_keys.py  commands.py  error_data.py  output_for_user.py  router_keys.py
bot/utils/enums/: commands.py  items.py  (+4 more)
(+125 files in other folders)
