[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
SQLAlchemy = "^2.0.35"
aiogram-calendar = "^0.5.0"
aiohttp = "^3.10.10"
alembic = "^1.13.3"
asyncpg = "^0.29.0"
pydantic-settings = "^2.5.2"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
